# AdvMyPythonApp

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
.azuredevops/: azure-pipelines.yml
src/examples/: file2.py
